wiki css  very small alignment bug
git-svn-id: http://springrts.com/svn/spring/site/trunk@7348 37977431-3df6-0310-b722-df95706aa16b

--- a/wwwroot/skins/mediawiki/spring.css
+++ b/wwwroot/skins/mediawiki/spring.css
@@ -150,6 +150,7 @@ h4 .mw-headline:before   {content: '\25b8\25b8\25b8';}
 
 #article hr              {margin-left: 0px;}
 #article ul              {margin-left: 0px;}
+#article table           {margin-left: 0px;}
 
 
 /* MEDIAWIKI SPECIALS */
